Added ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ lab01/c_version/\.idea/
 lab01/python_version/\.idea/
 
 lab01/c_version/cmake-build-debug/
+
+\.idea/
+
+cmake-build-debug/
+
+lab01/dbac496@banshee\.uow\.edu\.au
