--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
-project(lab02/c_version C)
+project(${PROJECT_SOURCE_DIR}/lab02/c_version C)
 
-include_directories(BEFORE ${PROJECT_SOURCE_DIR})
-include_directories(AFTER ${PROJECT_SOURCE_DIR}/lab02/c_version)
+include_directories(${PROJECT_SOURCE_DIR})
+include_directories(${PROJECT_SOURCE_DIR}/lab02)
+include_directories(${PROJECT_SOURCE_DIR}/lab02/c_version)
 
 set(CMAKE_C_STANDARD 99)
+set(dir ${CMAKE_CURRENT_SOURCE_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${dir}/lab02/")
 
-add_executable(ex2 lab02/c_version/ex2.c)
+add_executable(ex2 lab02/c_version/ex2.c helper.h)
