--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
-project(${PROJECT_SOURCE_DIR}/lab03/c_version C)
+project(${PROJECT_SOURCE_DIR}/assignment01/c_version C)
 
 include_directories(${PROJECT_SOURCE_DIR})
-include_directories(${PROJECT_SOURCE_DIR}/lab03)
-include_directories(${PROJECT_SOURCE_DIR}/lab03/c_version)
+include_directories(${PROJECT_SOURCE_DIR}/assignment01)
+include_directories(${PROJECT_SOURCE_DIR}/assignment01/c_version)
 
 set(CMAKE_C_STANDARD 99)
 set(dir ${CMAKE_CURRENT_SOURCE_DIR})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${dir}/lab03/")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${dir}/assignment01/")
 
-add_executable(ex3 helper.h lab03/c_version/ex3.c)
+add_executable(ass1 helper.h assignment01/c_version/assignment01.c)
