--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,6 @@ set(CMAKE_C_STANDARD 99)
 set(dir ${CMAKE_CURRENT_SOURCE_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${dir}/assignment01/")
 set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
-set(SOURCE_FILES helper.h helper.c assignment01/c_version/assignment01.c
-        assignment01/c_version/avltree.h assignment01/c_version/avltree.c)
+set(SOURCE_FILES assignment01/c_version/ass1.c)
 
 add_executable(ass1 ${SOURCE_FILES})
