--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,6 @@ set(CMAKE_C_STANDARD 99)
 set(dir ${CMAKE_CURRENT_SOURCE_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${dir}/assignment02/")
 set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS})
-set(SOURCE_FILES assignment02/c_version/ass2.c)
+set(SOURCE_FILES helper.c helper.h assignment02/c_version/ass2.c)
 
 add_executable(ass2 ${SOURCE_FILES})
