--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,6 @@ set(CMAKE_CXX_STANDARD 98)
 set(dir ${CMAKE_CURRENT_SOURCE_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${dir}/assignment02/")
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
-set(SOURCE_FILES assignment02/cpp_version/ass2.cpp assignment02/cpp_version/EventQueue.cpp
-        assignment02/cpp_version/EventQueue.h assignment02/cpp_version/Servers.cpp
-        assignment02/cpp_version/Servers.h assignment02/cpp_version/ServerQueue.cpp
-        assignment02/cpp_version/ServerQueue.h)
+set(SOURCE_FILES assignment02/cpp_version/ass2.cpp)
 
 add_executable(ass2 ${SOURCE_FILES})
