Added skeleton files for ex7

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
-project(Assignment02 CXX)
+project(Exercise07 C)
 
 include_directories(${PROJECT_SOURCE_DIR})
-include_directories(${PROJECT_SOURCE_DIR}/assignment02)
-include_directories(${PROJECT_SOURCE_DIR}/assignment02/cpp_version)
+include_directories(${PROJECT_SOURCE_DIR}/ex07)
+include_directories(${PROJECT_SOURCE_DIR}/ex07/c_version)
 
-#target_link_libraries()
-
-set(CMAKE_CXX_STANDARD 98)
+set(CMAKE_C_STANDARD 99)
 set(dir ${CMAKE_CURRENT_SOURCE_DIR})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${dir}/assignment02/")
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
-set(SOURCE_FILES assignment02/cpp_version/ass2.cpp)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${dir}/ex07/")
 
-add_executable(ass2 ${SOURCE_FILES})
+add_executable(ex7 helper.h helper.c ex07/c_version/ex7.c)
