Added skeleton files for ex08

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
-project(Exercise07 CXX)
+project(Exercise08 CXX)
 
 include_directories(${PROJECT_SOURCE_DIR})
-include_directories(${PROJECT_SOURCE_DIR}/ex07)
-include_directories(${PROJECT_SOURCE_DIR}/ex07/cpp_version)
+include_directories(${PROJECT_SOURCE_DIR}/ex08)
+include_directories(${PROJECT_SOURCE_DIR}/ex08/cpp_version)
 
-set(CMAKE_CXX_STANDARD 98)
+set(CMAKE_CXX_STANDARD 11)
 set(dir ${CMAKE_CURRENT_SOURCE_DIR})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${dir}/ex07/")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${dir}/ex08/")
 
-add_executable(ex7 helper.h helper.c ex07/cpp_version/queue.h ex07/cpp_version/ex7.cpp ex07/cpp_version/ex7.h)
+add_executable(ex8 helper.h helper.c ex08/cpp_version/ex08.cpp ex08/cpp_version/HashMap.cpp)
